# server

./: CMakeLists.txt
contrib/extractor/: CMakeLists.txt
contrib/mmap/: CMakeLists.txt
contrib/vmap_extractor/: CMakeLists.txt
contrib/vmap_extractor/vmapextract/: CMakeLists.txt
contrib/vmap_reader/: CMakeLists.txt
dep/: CMakeLists.txt
dep/libmpq/: CMakeLists.txt
dep/loadlib/: CMakeLists.txt
dep/src/g3dlite/: CMakeLists.txt
dep/src/zlib/: CMakeLists.txt
src/game/Maps/: MoveMapSharedDefines.h
